# xf86-video-openchrome

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  configure.ac  release_notes-0.3.0
libxvmc/: Imakefile  Makefile.am  driDrawable.c  viaLowLevel.c  viaLowLevel.h  viaLowLevelPro.c  viaXvMC.c  viaXvMCPriv.h  vldXvMC.h  xf86dri.c  xf86dri.h
man/: Makefile.am
src/: Makefile.am  drmmode_display.c  drmmode_display.h  openchrome.man  openchrome_drm.h  via.h  via_3d.c  via_3d.h  via_accel.c  via_analog.c  via_bandwidth.c  via_bios.h  via_ch7xxx.c  via_ch7xxx.h  via_crtc.c  via_cursor.c  via_dga.c  via_display.c  via_dmabuffer.h  via_dri.c  via_dri.h  via_driver.c  via_driver.h  via_drm.h  via_eng_regs.h  via_exa.c  via_exa_h2.c  via_exa_h6.c  via_fp.c  via_fp.h  via_i2c.c  via_id.c  via_id.h  via_kms.c  via_kms.h  via_lvds.c  via_memcpy.c  via_memmgr.c  via_memmgr.h  via_memory.c  (+31 more)
src/ums/: Makefile.am  via_crtc.c  via_display.c  via_mode.c  via_ums.c  via_vgahw.c
src/xvmc/: Imakefile  viaLowLevelPro.c  xf86dri.c
tools/: registers.c
unichrome/: Imakefile  Makefile.am  via.h  via.man  via_3d.c  via_accel.c  via_bandwidth.c  via_bios.h  via_ch7xxx.c  via_ch7xxx.h  via_cursor.c  via_dga.c  via_dmabuffer.h  via_dri.c  via_dri.h  via_driver.c  via_driver.h  via_drm.h  via_drmclient.h  via_i2c.c  via_id.c  via_id.h  via_memcpy.c  via_memory.c  via_mode.c  via_mode.h  via_priv.h  via_regs.h  via_shadow.c  via_swov.c  via_vbe.c  via_vgahw.c  via_video.c  via_video.h  via_vt162x.c  via_vt162x.h  via_xvmc.c  via_xvmc.h  via_xvpriv.h
